--- a/start/index.html
+++ b/start/index.html
@@ -7,8 +7,31 @@
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/jsx">
-      const app = document.getElementById('app');
-      ReactDOM.render(<h1>Develop. Preview. Ship. 🚀</h1>, app);
+
+      
+    function Header({title}) {
+      console.log(title)
+      return <h1>Develop. {title} Preview. Ship. 🚀</h1>;
+    }
+
+    function HomePage() {
+      const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+
+      return (
+        <div>
+          <Header title="Develop. Preview. Ship. 🚀" />
+          <ul>
+              {names.map(name => (
+            <li key={name}>
+                {name}
+            </li>
+              ))}
+          </ul>
+        </div>
+      );
+    }
+
+    ReactDOM.render(<HomePage />, app);
     </script>
   </body>
 </html>
