--- a/start/index.html
+++ b/start/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <html>
   <body>
     <div id="app"></div>
@@ -6,42 +5,38 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <script type="text/jsx">
+      const app = document.getElementById("app")
 
-      
-    function Header({title}) {
-      console.log(title)
-      return <h1>{title}</h1>;
-    }
-
-
-
-    function HomePage() {
-      const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
-      const [likes, setLikes] = React.useState(0);
-
-      function handleClick() {
-        if(likes >= 10) return;
-        setLikes(likes + 1)
-        
+      function Header({ title }) {
+        return <h1>{title ? title : "Default title"}</h1>
       }
 
-      return (
-        <div>
-          <Header title="Develop. Preview. Ship. 🚀" />
-          <ul>
-              {names.map(name => (
-            <li key={name}>
-                {name}
-            </li>
-              ))}
-          </ul>
-          <button onClick={handleClick}>Like({likes})</button>
-        </div>
-      );
-    }
+      function HomePage() {
+        const names = ["Ada Lovelace", "Grace Hopper", "Margaret Hamilton"]
 
-    ReactDOM.render(<HomePage />, app);
+        const [likes, setLikes] = React.useState(0)
+
+        function handleClick() {
+          setLikes(likes + 1)
+        }
+
+        return (
+          <div>
+            <Header title="Develop. Preview. Ship. 🚀" />
+            <ul>
+              {names.map((name) => (
+                <li key={name}>{name}</li>
+              ))}
+            </ul>
+
+            <button onClick={handleClick}>Like ({likes})</button>
+          </div>
+        )
+      }
+
+      ReactDOM.render(<HomePage />, app)
     </script>
   </body>
 </html>
